--- a/src/web/login.html
+++ b/src/web/login.html
@@ -9,8 +9,6 @@
 </head>
 
 <body>
-  <button class="theme-toggle" id="themeToggle" aria-label="Toggle theme">🌙</button>
-
   <div class="page-container">
     <div class="card">
       <h1>Welcome Back</h1>
@@ -18,7 +16,7 @@
 
       <div id="errorMessage" class="error-message hidden"></div>
 
-      <form id="loginForm">
+      <form method="POST" action="http://localhost:8080/api/login">
         <div class="form-group">
           <label for="username">Username <span class="required">*</span></label>
           <input type="text" id="username" name="username" required placeholder="Enter username">
@@ -37,94 +35,6 @@
       </div>
     </div>
   </div>
-
-  <script>
-    // Theme toggle functionality
-    const themeToggle = document.getElementById('themeToggle');
-    const htmlElement = document.documentElement;
-
-    // Load theme from localStorage or detect system preference
-    function loadTheme() {
-      const savedTheme = localStorage.getItem('theme');
-      if (savedTheme) {
-        htmlElement.setAttribute('data-theme', savedTheme);
-        updateThemeIcon(savedTheme);
-      } else {
-        const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-        const theme = prefersDark ? 'dark' : 'light';
-        htmlElement.setAttribute('data-theme', theme);
-        updateThemeIcon(theme);
-      }
-    }
-
-    function updateThemeIcon(theme) {
-      themeToggle.textContent = theme === 'dark' ? '☀️' : '🌙';
-    }
-
-    themeToggle.addEventListener('click', () => {
-      const currentTheme = htmlElement.getAttribute('data-theme');
-      const newTheme = currentTheme === 'dark' ? 'light' : 'dark';
-      htmlElement.setAttribute('data-theme', newTheme);
-      localStorage.setItem('theme', newTheme);
-      updateThemeIcon(newTheme);
-    });
-
-    loadTheme();
-
-    // Form submission handler
-    const loginForm = document.getElementById('loginForm');
-    const errorMessage = document.getElementById('errorMessage');
-
-    loginForm.addEventListener('submit', async (e) => {
-      e.preventDefault();
-
-      // Hide any previous error messages
-      errorMessage.classList.add('hidden');
-
-      // Get form values
-      const username = document.getElementById('username').value.trim();
-      const password = document.getElementById('password').value.trim();
-
-      // Validate required fields
-      if (!username || !password) {
-        errorMessage.textContent = 'Username and password are required.';
-        errorMessage.classList.remove('hidden');
-        return;
-      }
-
-      // Disable submit button
-      const submitButton = loginForm.querySelector('button[type="submit"]');
-      submitButton.disabled = true;
-      submitButton.textContent = 'Logging in...';
-
-      try {
-        const response = await fetch('http://localhost:8080/api/login', {
-          method: 'POST',
-          headers: {
-            'Content-Type': 'application/json',
-          },
-          body: JSON.stringify({ username, password }),
-        });
-
-        if (response.ok) {
-          const data = await response.json();
-          localStorage.setItem('user_id', data.user_id);
-          window.location.href = 'user-info.html';
-        } else {
-          const errorData = await response.json();
-          errorMessage.textContent = errorData.message || 'Login failed. Please check your credentials.';
-          errorMessage.classList.remove('hidden');
-          submitButton.disabled = false;
-          submitButton.textContent = 'Login';
-        }
-      } catch (error) {
-        errorMessage.textContent = 'Network error. Please check your connection and try again.';
-        errorMessage.classList.remove('hidden');
-        submitButton.disabled = false;
-        submitButton.textContent = 'Login';
-      }
-    });
-  </script>
 </body>
 
 </html>
