--- a/src/web/user-info.html
+++ b/src/web/user-info.html
@@ -32,7 +32,7 @@
 
     if (!userId) {
       // No user_id in URL, redirect to login
-      window.location.href = 'login.html';
+      window.location.href = 'index.html';
     } else {
       // Fetch user greeting
       fetchUserGreeting(userId);
