--- a/src/web/create-user.html
+++ b/src/web/create-user.html
@@ -16,7 +16,7 @@
 
       <div id="errorMessage" class="error-message hidden"></div>
 
-      <form method="POST" action="http://localhost:8080/api/create-user">
+      <form id="createUserForm" method="POST" action="http://localhost:8080/api/create-user">
         <div class="form-group">
           <label for="username">Username <span class="required">*</span></label>
           <input type="text" id="username" name="username" required placeholder="Enter username">
@@ -56,10 +56,34 @@
       </form>
 
       <div class="link-container">
-        <p>Already have an account? <a href="login.html">Back to Login</a></p>
+        <p>Already have an account? <a href="index.html">Login</a></p>
       </div>
     </div>
   </div>
+
+  <script>
+    document.getElementById('createUserForm').addEventListener('submit', async (e) => {
+      e.preventDefault();
+      const formData = new FormData(e.target);
+      try {
+        const response = await fetch('http://localhost:8080/api/create-user', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/x-www-form-urlencoded' },
+          body: new URLSearchParams(formData)
+        });
+        if (response.ok) {
+          const userId = await response.text();
+          window.location.href = `user-info.html?user_id=${userId}`;
+        } else {
+          document.getElementById('errorMessage').textContent = 'Failed to create user';
+          document.getElementById('errorMessage').classList.remove('hidden');
+        }
+      } catch (err) {
+        document.getElementById('errorMessage').textContent = 'Network error';
+        document.getElementById('errorMessage').classList.remove('hidden');
+      }
+    });
+  </script>
 </body>
 
 </html>
